[plasma-apply-desktoptheme] Notify config change

https://invent.kde.org/plasma/libplasma/-/commit/af85630935c050ca2600b2c5eae7d55a23b2848e
changed Plasma::Theme to use KConfigWatcher to react to config changes instead of
file-monitoring plasmarc.

That means we need to pass the notify flag when writing the config change.

To be able to do that manipulate the config directly instead of through the
Theme API

BUG: 507681